# LLM-MM-Agent

./: .env.example  .gitignore  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
MMAgent/: main.py
MMAgent/agent/: coordinator.py  problem_analysis.py  retrieve_method.py  task_solving.py
MMAgent/llm/: llm.py
MMAgent/output/MM-Agent/2024_C_20260426-041534/code/: main1.py
MMAgent/output/MM-Agent/2024_C_20260426-041534/code/outputs/: error_log.json  manifest.json  wimbledon_analysis_report.txt  wimbledon_match_summary.csv  wimbledon_player_summary.csv  wimbledon_point_pressure_segments.csv  wimbledon_points_cleaned.csv  wimbledon_rate_limit_proxy.csv  wimbledon_rate_limit_proxy_summary.json
MMAgent/output/MM-Agent/2024_C_20260426-045744/code/: main1.py
MMAgent/output/MM-Agent/2024_C_20260426-045744/code/task1_outputs/: task1_calibration_table.csv  task1_match_audit.csv  task1_model_report.json  task1_model_summary.txt  task1_prepared_point_level_dataset.csv
MMAgent/output/ngrok_test/2024_A_20260419-112800/json/: 2024_A.json
MMAgent/output/ngrok_test/2024_A_20260419-112800/markdown/: 2024_A.md
MMAgent/utils/: problem_analysis.py  utils.py
doc/: User_Guide.md
docs/: README.md
docs/en/: README.md  architecture.md  evaluation.md  math-theory.md  quick-start.md  source-guide.md  workflow.md
docs/zh/: README.md  architecture.md  evaluation.md  math-theory.md  quick-start.md  source-guide.md  workflow.md
